# MDLM_assignment

./: .gitignore  README.md  Spaceship_Titanic.ipynb  Spaceship_Titanic_Modeling.ipynb  Spaceship_Titanic_Understanding.ipynb  kaggle.json  pyproject.toml
src/: train.py  utils.py
utils/: eda_utils.py  encoding_utils.py  feature_utils.py  preprocessing_pipeline.py
