[project]
name = "mdlm-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "google>=3.0.0",
    "ipykernel>=7.1.0",
    "kaggle>=1.8.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "protobuf>=6.33.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "scipy-stubs~=1.16.3",
    "seaborn>=0.13.2",
]
